--- a/react-car-rental-finder/package.json
+++ b/react-car-rental-finder/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server --watch src/cars.json --port 8002"
+    "server": "json-server --watch src/cars.json --port 8002",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
@@ -28,6 +29,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "json-server": "^1.0.0-beta.3",
     "vite": "npm:rolldown-vite@7.2.5"
